# opchat-backend

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yaml  makefile  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8e1efd3b4c8d_initial_schema_user_membership_chat_.py  f2ac16f31a9f_add_idempotency_key_to_message_table.py
app/: __init__.py  dependencies.py  main.py  message_processor.py  ws_gateway.py
app/api/: auth.py  chats.py  health.py  messages.py
app/api/schemas/: __init__.py  chat.py  message.py
app/core/: __init__.py  auth_utils.py  config.py  enums.py  logging.py  rate_limiter.py
app/core/auth/: auth_utils.py
app/core/config/: config.py
app/core/messaging/: __init__.py  broker.py  processor.py
app/core/observability/: metrics.py
app/core/rate_limiting/: rate_limiter.py
app/db/: db.py
app/models/: __init__.py  chat.py  membership.py  message.py  user.py
app/repositories/: __init__.py  base_repo.py  chat_repo.py  message_repo.py  transaction.py  user_repo.py
app/schemas/: auth.py
app/services/: __init__.py  chat_service.py  message_service.py
logging/: README.md  logging.development.yaml  logging.production.yaml  logging.yaml
scripts/db_scripts/: README.md  benchmark.py  clean_data.py  populate.py  populate_large.py  setup_roles.py  verify_population.py
scripts/db_scripts/data/: conversations.json  users.json
tests/: conftest.py  test_stub.py
tests/api/: conftest.py  test_chat_endpoints.py  test_chat_schemas.py  test_message_endpoints.py
tests/auth/: test_auth_integration.py  test_auth_schemas.py  test_auth_utils.py  test_rate_limiting.py
tests/core/: test_message_guarantees.py  test_message_reliability.py  test_messaging.py  test_messaging_integration.py  test_observability.py
tests/helpers/: auth_helper.py
tests/integration/: conftest.py  test_chat_flow.py
tests/repositories/: conftest.py  test_base_repo.py  test_chat_repo.py  test_chat_repo_new_methods.py  test_edge_cases.py  test_message_repo.py  test_transaction.py  test_user_repo.py
tests/services/: conftest.py  test_chat_service.py  test_message_service.py
