[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opchat-backend"
version = "0.1.0"
description = "Real-time messaging backend service"
authors = [{name = "OpChat Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",
    "redis>=6.4.0",
    "pika>=1.3.2",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
]


[tool.black]
line-length = 88
target-version = ['py312']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
  | tests
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["tests", "alembic", "migrations"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"migrations/*" = ["E501", "F401", "E402", "I001"]
"alembic/*" = ["E501", "F401", "E402", "I001"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]
skip = ["migrations", "alembic", "tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "alembic.*",
    "pika.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models",
    "app.models.*",
    "app.models.user",
    "app.models.membership",
    "app.models.chat", 
    "app.models.message"
]
ignore_errors = true
follow_imports = "skip"
